# DrWeb-test-task

./: .gitignore  CMakeLists.txt  Dictionary.sln  README.md
Dictionary/: Dictionary.vcxproj  Dictionary.vcxproj.filters  main.cpp
Dictionary/dictionary/: dictionary.h
Dictionary/dictionary/notFoundException/: notFoundException_interface.h
src/: main.cpp
src/dictionary/: dictionary.h  dictionary_interface.h
src/notFoundException/: notFoundException.h
test/: CMakeLists.txt  test.cpp
